--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="808d6d">  <td>23/02/20 14:44:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login()[pri:0, instance:TestPack.LoginTest@43034809]">Login</td> 
-  <td>main@1950117092</td>   <td></td> </tr>
-<tr bgcolor="a4f594">  <td>23/02/20 14:44:33</td>   <td>7004</td> <td title="&lt;&lt;QDMSDriver.closeChrome()[pri:0, instance:TestPack.LoginTest@43034809]">&lt;&lt;closeChrome</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1950117092</td>   <td></td> </tr>
-<tr bgcolor="a4f594">  <td>23/02/20 14:44:10</td>   <td>-16226</td> <td title="&gt;&gt;QDMSDriver.main()[pri:0, instance:TestPack.LoginTest@43034809]">&gt;&gt;main</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1950117092</td>   <td></td> </tr>
+<tr bgcolor="7f8def">  <td>23/02/20 20:01:55</td>   <td>0</td> <td title="&lt;&lt;QDMSDriver.closeChrome()[pri:0, instance:TestPack.AddSbuinitialTestCases@2a03d65c]">&lt;&lt;closeChrome</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@311853607</td>   <td></td> </tr>
+<tr bgcolor="7f8def">  <td>23/02/20 20:01:40</td>   <td>-15289</td> <td title="&gt;&gt;QDMSDriver.main()[pri:0, instance:TestPack.AddSbuinitialTestCases@2a03d65c]">&gt;&gt;main</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@311853607</td>   <td></td> </tr>
+<tr bgcolor="e8a3ef">  <td>23/02/20 20:01:55</td>   <td>-304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddSbuinitialTestCases.testcase()[pri:0, instance:TestPack.AddSbuinitialTestCases@2a03d65c]">testcase</td> 
+  <td>main@311853607</td>   <td></td> </tr>
 </table>
